tests/reference/asr-array_size_05-bc7d72f.stderr
semantic error: dim has already been specified as a positional/keyword argument to size.
 --> tests/errors/array_size_05.f90:6:14
  |
6 |     size_a = size(a, kind=kindvar, dim=1)
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
